--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -58,6 +58,9 @@ jobs:
         password: ${{ secrets.DOCKER_TOKEN }}
         logout: true
 
+    - name: 7. Docker Push
+      run: docker push ${{ secrets.DOCKER_USERNAME }}/istory:1.0
+
 #    # The USERNAME and TOKEN need to correspond to the credentials environment variables used in
 #    # the publishing section of your build.gradle
 #    - name: Publish to GitHub Packages
